corrected vscode image src

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<h4>npm</h4>
 						</div>
 						<div class="techStackGroup">
-							<img class="techStackIcon "src="images/VSCode.png" alt="VS Code" />
+							<img class="techStackIcon "src="images/vscode.png" alt="VS Code" />
 							<h4>VS Code</h4>
 						</div>
 						<!-- <div class="techStackGroup">
