--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<section id="header">
 				<div class="inner">
 					<h1><strong>Leah Daniel</strong></h1>
-					<h3>Full-Stack Software Developer and Nashville, TN Native</h3>
+					<h3>Software Developer and Nashville, TN Native</h3>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">About Me</a></li>
 						<li><a href="#two" class="button scrolly">Tech Stack</a></li>
