added resume and most recent project

--- a/index.html
+++ b/index.html
@@ -160,13 +160,21 @@
 								</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/underConstruction.png" alt="" /></span>
-							<h3>Group Project</h3>
-							<p>Under Construction</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button primary">View Code</a></li>
-								<!--<li><a href="#" class="button">Deployed</a></li>-->
-							</ul>
+							<span class="image fit"><img src="images/Trove.png" alt="" /></span>
+							<h3>Side Full-Stack Project</h3>
+							<p>
+								A new version of Trove, now using both Python and Django REST Framework. 
+								In this project, I focused on strengthening my Django ORM knowledge and making my React 
+								code more efficient with fewer re-renders. 
+							</p>
+							<p>
+								Built with React, Javascript, 
+								Python, Django REST Framework, and CSS/Reactstrap.
+							</p>
+								<ul class="actions stacked">
+									<li><a href="https://github.com/LeahDaniel/trove-client" class="button primary">View Code</a></li>
+									<li><a href="http://trove-leah.herokuapp.com/login" class="button">Deployed</a></li>
+								</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/underConstruction.png" alt="" /></span>
@@ -203,7 +211,7 @@
 							</a>
 						</div>
 						<div class="iconsColumn">
-							<a href="#" class="flexIconLabel" target="_blank" >
+							<a href="./images/Leah Daniel Resume.pdf" class="flexIconLabel" target="_blank" >
 								<i class="icon solid fa-file contactIcon"></i>
 								<p class="contactLabel"> Resume </p>
 							</a>
